--- a/Test/call/回顾对象.html
+++ b/Test/call/回顾对象.html
@@ -149,10 +149,10 @@
 		
 
 		audio.init();
-		audio.add("mp3/01.mp3");
-		audio.add("mp3/02.mp3");
-		audio.add("mp3/03.mp3");
-		audio.add("mp3/04.mp3");
+		audio.add("http://osxfegy94.bkt.clouddn.com/01.mp3");
+		audio.add("http://osxfegy94.bkt.clouddn.com/02.mp3");
+		audio.add("http://osxfegy94.bkt.clouddn.com/03.mp3");
+		audio.add("http://osxfegy94.bkt.clouddn.com/04.mp3");
 		audio.time(function(){
 			document.getElementById("time").innerHTML = this.time;
 		});
